# RWA-smart-contract

./: Anchor.toml  hardhat.config.js  package-lock.json  package.json
contracts/access/: IAccessControl.sol  MultiChainAccess.sol
contracts/bridge/: CommodityToken.sol  CrossChainBridge.sol  IBridge.sol  ISoulboundNFT.sol  ITokenBridge.sol  MessageSender.sol
contracts/identity/: IDMapping.sol  SoulboundNFT.sol  VerificationLogic.sol
contracts/mocks/: MockTokenBridge.sol  MockWormhole.sol
deployments/: amoy.json  localhost.json
ethereum/: hardhat.config.js  package.json
ethereum/contracts/: AssetFactory.sol  (+3 more)
programs/identity_program/: Anchor.toml  Cargo.toml
programs/identity_program/src/: lib.rs
programs/identity_program/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-CCTashbGtyTu6y4rmA4aVQ6rXDvgfS9Q2hQU3gJ2CFfU.tar.zst  stake-account-keypair.json  tower-1_9-4sCLwtXpXwuFoMgAAMnTBDNCHvnTEd5kGCJstmb3kSfp.bin.new  validator-keypair.json  vote-account-keypair.json
programs/identity_program/test-ledger/accounts/snapshot/100/: 0.2  100.0
programs/identity_program/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1742122799727285  MANIFEST-000021
programs/identity_program/test-ledger/snapshot/100/: 100  status_cache
scripts/: check-balance.js  checkBalance.js  deploy-amoy.js  deploy-local.js  deploy-solana.js  deploy.js  fetch_vaa.js  oracle.js  send_message.js  test-amoy.js  test-identity-verification.js  test-local.js  test-token-transfer.js  test-wormhole-messaging.js
(+15 files in other folders)
